More testing for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
 version: '3.9'
 
 services:
-  postgres:
+  app:
+    image: 'spring-boot-docker:latest'
+    build:
+      context: .
+    container_name: app
+    depends_on:
+      - postgres_db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_db:5432/food
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=create-drop
+  postgres_db:
     image: postgres
     restart: always
+    container_name: postgres_db
     ports:
       - 5432:5432
     volumes:
