--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.stevekung.springbootdocker'
+group = 'com.stevekung.springbootpostgresql'
 version = '0.0.1'
 
 java {
