--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/food
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-server.error.include-message=always
+spring.data.mongodb.database=foods
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
