--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.stevekung.springbootpostgresql'
+group = 'com.stevekung.springbooth2'
 version = '0.0.1'
 
 java {
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:3.2.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
